--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,11 +23,7 @@ dependencies {
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:30.1.1-jre'
 
-
-    //jxing for oq code generation
-    implementation 'com.google.zxing:core:3.4.1'
-
-    implementation fileTree(dir: 'build/libs', include: '*.jar')
+    implementation fileTree(dir: 'src/libs', include: '*.jar')
 
 }
 
