--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,7 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.7.2'
     testImplementation 'org.assertj:assertj-core:3.21.0'
+    implementation 'commons-io:commons-io:2.6'
     implementation 'com.google.guava:guava:30.1.1-jre'
     implementation fileTree(dir: 'src/libs', include: '*.jar')
     implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
