--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,7 @@
 plugins {
     id 'application'
     id "org.springframework.boot" version "2.6.4"
+    id 'jacoco'
 }
 
 repositories {
@@ -31,4 +32,9 @@ application {
 
 tasks.named('test') {
     useJUnitPlatform()
+    finalizedBy jacocoTestReport
+}
+
+jacocoTestReport {
+    dependsOn test
 }
