--- a/.github/workflows/javaBuild.yaml
+++ b/.github/workflows/javaBuild.yaml
@@ -19,8 +19,8 @@ jobs:
           java-version: '11'
           distribution: 'adopt'
       - name: Validate Gradle wrapper
-        uses: gradle/wrapper-validation-action@e6e38bacfdf1a337459f332974bb2327a31aaf4b
+        uses: wrapper-validation-action@e6e38bacfdf1a337459f332974bb2327a31aaf4b
       - name: Build with Gradle
-        uses: gradle/gradle-build-action@937999e9cc2425eddc7fd62d1053baf041147db7
+        uses: gradle-build-action@937999e9cc2425eddc7fd62d1053baf041147db7
         with:
           arguments: build
