--- a/.github/workflows/javaBuild.yaml
+++ b/.github/workflows/javaBuild.yaml
@@ -10,5 +10,7 @@ jobs:
         with:
           java-version: 17
           distribution: 'adopt'
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
       - name: Build with Gradle
         run: ./gradlew build
