--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,7 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.7.2'
     testImplementation 'org.assertj:assertj-core:3.21.0'
+    testImplementation group: 'org.mockito', name: 'mockito-core', version: '4.4.0'
     implementation 'commons-io:commons-io:2.6'
     implementation 'com.google.guava:guava:30.1.1-jre'
     implementation fileTree(dir: 'src/libs', include: '*.jar')
@@ -27,7 +28,7 @@ dependencies {
 }
 
 application {
-    mainClass = 'SmartModerationDesktopApp.MainWindow'
+    mainClass = 'SmartModerationDesktopApp.SmartModerationDesktopApp'
 }
 
 tasks.named('test') {
