--- a/.github/workflows/javaBuild.yaml
+++ b/.github/workflows/javaBuild.yaml
@@ -14,3 +14,14 @@ jobs:
         run: chmod +x ./gradlew
       - name: Build with Gradle
         run: ./gradlew build
+  build:
+    stage: build
+    script:
+        - ./gradlew assemble
+    # define path to collect artifacts
+    artifacts:
+        paths:
+        - build/libs/*.jar
+        expire_in: 1 week
+    only:
+        - main
