--- a/.github/workflows/javaBuild.yaml
+++ b/.github/workflows/javaBuild.yaml
@@ -14,14 +14,11 @@ jobs:
         run: chmod +x ./gradlew
       - name: Build with Gradle
         run: ./gradlew build
-  build:
-    stage: build
-    script:
-        - ./gradlew assemble
-    # define path to collect artifacts
-    artifacts:
-        paths:
-        - build/libs/*.jar
-        expire_in: 1 week
-    only:
-        - main
+      - name: Validate Gradle wrapper
+        uses: gradle/wrapper-validation-action@e6e38bacfdf1a337459f332974bb2327a31aaf4b
+      - name: Publish package
+        uses: gradle/gradle-build-action@0d13054264b0bb894ded474f08ebb30921341cee
+        with:
+          arguments: publish
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
