--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'application'
     id "org.springframework.boot" version "2.6.4"
     id 'jacoco'
+    id 'java-library'
+    id 'maven-publish'
 }
 
 repositories {
@@ -35,6 +37,19 @@ jacocoTestReport {
 jar {
     manifest {
         attributes 'Main-Class': 'SmartModerationDesktopApp.SmartModerationDesktopApp'
+    }
+}
+
+publishing {
+    publications {
+        library(MavenPublication) {
+            from components.java
+        }
+    }
+    repositories {
+        maven {
+            url = uri("${buildDir}/publishing-repository")
+        }
     }
 }
 
