--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,19 @@ gradle-app.setting
 /app/build/
 /app/cache/
 
+# IntelliJ
+.idea/
+/.idea/
+*.iml
+.idea/workspace.xml
+.idea/tasks.xml
+.idea/gradle.xml
+.idea/assetWizardSettings.xml
+.idea/dictionaries
+.idea/libraries
+# Android Studio 3 in .gitignore file.
+.idea/caches
+.idea/modules.xml
+# Comment next line if keeping position of elements in Navigation Editor is relevant for you
+.idea/navEditor.xml
+
