--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,5 @@ gradle-app.setting
 # Comment next line if keeping position of elements in Navigation Editor is relevant for you
 .idea/navEditor.xml
 
+cache/
+
