--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,5 @@
 plugins {
     id 'application'
-    id "org.springframework.boot" version "2.6.4"
     id 'jacoco'
 }
 
@@ -12,9 +11,11 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.7.2'
     testImplementation 'org.assertj:assertj-core:3.21.0'
     testImplementation group: 'org.mockito', name: 'mockito-core', version: '4.4.0'
+
+    implementation group: 'com.google.zxing', name: 'core', version: '3.4.1'
+    implementation group: 'com.google.zxing', name: 'javase', version: '3.4.1'
     implementation 'commons-io:commons-io:2.6'
     implementation 'com.google.guava:guava:30.1.1-jre'
-    implementation fileTree(dir: 'src/libs', include: '*.jar')
     implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
     implementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.10.0-RC1'
 }
